<resources>
    <string name="app_name">RecyclerViewAlumnos</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="ciclo">Ciclo</string>
    <string name="curso">Curso</string>
    <string name="id">Ids</string>
    <string name="tvNombre"></string>
    <string name="tvApellidos"></string>
    <string name="tvCiclo"></string>
    <string name="tvCurso"></string>

</resources>